--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-chat-widget",
-  "version": "3.1.4",
+  "name": "@sagilaufer1992/react-chat-widget",
+  "version": "3.1.5",
   "description": "Chat web widget for React apps",
   "main": "lib/index.js",
   "repository": "git@github.com:Wolox/react-chat-widget.git",
@@ -27,6 +27,7 @@
     "markdown-it-sanitizer": "^0.4.3",
     "markdown-it-sup": "^1.0.0",
     "react-redux": "^7.2.4",
+    "react-type-animation": "^3.0.1",
     "redux": "^4.1.0"
   },
   "devDependencies": {
